[package]
name = "cardgame"
version = "0.1.0"
authors = ["Timothy <timothy.durbano@gmail.com>"]

[dependencies]
serde = "1.0.27"
serde_derive = "1.0.27"
serde_json = "1.0.9"
rand = "0.4.2"
log = "0.4.1"
#fluent = "0.2.0"
ws = "0.7.3"
#url = "1.7.0"
bincode = "1.0.0"
#tarpc = "0.9.0"
#tarpc-plugins = "0.2.0"
#futures = "0.1.18"
#tokio-core = "0.1.12"
chat-commands = {version = "0.1.0", path  = "./lib/chat-commands"}