[package]
name = "cardgame"
version = "0.1.0"
authors = ["Timothy <timothy.durbano@gmail.com>"]
edition = "2018"

[dependencies]
serde = "1.0.27"
serde_derive = "1.0.27"
serde_json = "1.0.9"
rand = "0.4.2"
log = { version = "0.4.5", features = ["max_level_debug", "release_max_level_info"] }
lazy_static = "1.0.1"
ws = "0.7.3"
url = "1.7.0"
bincode = "1.0.0"
chat-commands = {version = "0.1.0", path  = "./lib/chat-commands"}