[package]
name = "cardgame"
version = "0.1.0"
authors = ["Timothy <timothy.durbano@gmail.com>"]
edition = "2018"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
rand = "0.8"
log = { version = "0.4", features = ["std", "serde", "max_level_debug", "release_max_level_info"] }
lazy_static = "1.4"
ws = "0.9"
url = "2.2"
bincode = "1.3"
chat-commands = {version = "0.1.0", path  = "./lib/chat-commands"}